; ModuleID = '/home/carl/AnghaBench/memcached/extr_memcached.c_limited_get_locked.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_memcached.c_limited_get_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@IT_REFCOUNT_LIMIT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_5__* (i8*, i64, i32*, i32, i32*)* @limited_get_locked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_5__* @limited_get_locked(i8* %0, i64 %1, i32* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca %struct.TYPE_5__*, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i64, i64* %7, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = load i32, i32* %9, align 4
  %16 = load i32*, i32** %10, align 8
  %17 = call %struct.TYPE_5__* @item_get_locked(i8* %12, i64 %13, i32* %14, i32 %15, i32* %16)
  store %struct.TYPE_5__* %17, %struct.TYPE_5__** %11, align 8
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %19 = icmp ne %struct.TYPE_5__* %18, null
  br i1 %19, label %20, label %32

20:                                               ; preds = %5
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @IT_REFCOUNT_LIMIT, align 8
  %25 = icmp sgt i64 %23, %24
  br i1 %25, label %26, label %32

26:                                               ; preds = %20
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %28 = call i32 @do_item_remove(%struct.TYPE_5__* %27)
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %11, align 8
  %29 = load i32*, i32** %10, align 8
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @item_unlock(i32 %30)
  br label %32

32:                                               ; preds = %26, %20, %5
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  ret %struct.TYPE_5__* %33
}

declare dso_local %struct.TYPE_5__* @item_get_locked(i8*, i64, i32*, i32, i32*) #1

declare dso_local i32 @do_item_remove(%struct.TYPE_5__*) #1

declare dso_local i32 @item_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
